exercises/manifests/greeter-deployments.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v1
  labels:
    app: greeter
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v1
  template:
    metadata:
      labels:
        app: greeter
        version: v1
    spec:
      containers:
      - name: greeter
        image: GREETER-IMAGE
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: greeter-v2
  labels:
    app: greeter
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: greeter
      version: v2
  template:
    metadata:
      labels:
        app: greeter
        version: v2
    spec:
      containers:
      - name: greeter
        image: GREETER-IMAGE
