exercises/manifests/log-output-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-output-dep
  namespace: exercises
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-output
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-volume
          emptyDir: {}
      containers:
        - name: log-output-generator
          image: hanseni/log_output:1.10-generator
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
        - name: log-output-server
          image: hanseni/log_output:2.1-server2
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
