exercises/manifests/log-output-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: log-output-rollout
  namespace: exercises
spec:
  replicas: 3
  selector:
    matchLabels:
      app: log-output
  strategy:
    canary:
      analysis:
        templates:
        - templateName: cpu-rate
      steps:
        - setWeight: 33
        - pause:
            duration: 1m
        - setWeight: 66
        - pause:
            duration: 5m
  template:
    metadata:
      labels:
        app: log-output
    spec:
      volumes:
        - name: shared-volume
          emptyDir: {}
        - name: config-volume
          configMap:
            name: log-output-config
            items:
              - key: FILE_CONTENT
                path: information.txt
      containers:
        - name: log-output-generator
          image: LOG-OUTPUT-GENERATOR-IMAGE
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
        - name: log-output-server
          image: LOG-OUTPUT-SERVER-IMAGE
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
            - name: config-volume
              mountPath: /config
              readOnly: true
