exercises/manifests/ping-pong-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: ping-pong-rollout
  namespace: exercises
spec:
  replicas: 3
  selector:
    matchLabels:
      app: ping-pong
  strategy:
    canary:
      analysis:
        templates:
        - templateName: cpu-rate
      steps:
        - setWeight: 33
        - pause:
            duration: 1m
        - setWeight: 66
        - pause:
            duration: 5m
  template:
    metadata:
      labels:
        app: ping-pong
    spec:
      containers:
        - name: ping-pong
          image: PING-PONG-IMAGE
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 10
            periodSeconds: 5
