exercises/manifests/greeter-knative.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: greeter
  namespace: exercises
spec:
  template:
    spec:
      containers:
      - name: greeter
        image: GREETER-IMAGE
        env:
        - name: VERSION
          value: "v1"
        ports:
        - containerPort: 80
