exercises/manifests/log-output-knative.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: log-output
  namespace: exercises
spec:
  template:
    spec:
      volumes:
        - name: shared-volume
          emptyDir: {}
        - name: config-volume
          configMap:
            name: log-output-config
            items:
              - key: FILE_CONTENT
                path: information.txt
      containers:
        - name: log-output-generator
          image: LOG-OUTPUT-GENERATOR-IMAGE
          env:
            - name: FILE
              value: "/shared/log.txt"
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
        - name: log-output-server
          image: LOG-OUTPUT-SERVER-IMAGE
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          env:
            - name: FILE
              value: "/shared/log.txt"
            - name: MESSAGE
              valueFrom:
                configMapKeyRef:
                  name: log-output-config
                  key: MESSAGE
            - name: GREETER_URL
              value: "http://greeter.exercises.svc.cluster.local"
            - name: PINGPONG_URL
              value: "http://ping-pong.exercises.svc.cluster.local"
            - name: TEST_VALUE_TO_TRIGGER_ROLLOUT
              value: "4ee"
          volumeMounts:
            - name: shared-volume
              mountPath: /shared
            - name: config-volume
              mountPath: /config
              readOnly: true
          ports:
          - containerPort: 80
