exercises/manifests/ping-pong-knative.yaml
apiVersion: serving.knative.dev/v1
kind: Service
metadata:
  name: ping-pong
  namespace: exercises
spec:
  template:
    spec:
      containers:
        - name: ping-pong
          image: PING-PONG-IMAGE
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 5
          ports:
          - containerPort: 80
          env:
            - name: PGHOST
              value: "postgres-svc"
            - name: PGPORT
              value: "5432"
            - name: PGUSER
              value: "postgres"
            - name: PGPASSWORD
              value: "password"
            - name: PGDATABASE
              value: "postgres"
            - name: TEST_VALUE_TO_TRIGGER_ROLLOUT
              value: "0e"
