exercises/manifests/ping-pong-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ping-pong-svc
  namespace: exercises
spec:
  type: LoadBalancer
  selector:
    app: ping-pong
  ports:
    - port: 2345
      protocol: TCP
      targetPort: 3000
